<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aolanrewaju.layoutdemos.ConstraintLayoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterH"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterR"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterI"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterZ"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterO"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterN"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterT"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterA"/>

                <TextView
                    style="@style/LinearLayoutStyle"
                    android:text="@string/letterL"/>

            </LinearLayout>

        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>
